# SkySpy

./: .dockerignore  .env.example  .env.test.sample  .gitignore  .gitmodules  BACKGROUND_SERVICES_IMPROVEMENT_PLAN.md  BUG_AUDIT.md  BUG_HUNT_REPORT.md  CLAUDE.md  Dockerfile  EFFICIENCY_AUDIT.md  Makefile  PLAN-finish-pro-radar-ux.md  PLAN-pro-radar-ux.md  PLAN.md  README.md  docker-compose.dev-auth.yaml  docker-compose.public-auth.yaml  docker-compose.test.yaml  docker-compose.yml  netlify.toml  package-lock.json  pyproject.toml  screenshot.js
.claude/agents/: readme-docs-writer.md
.github/: CODEOWNERS
.github/signing/: step-ca.json
.github/workflows/: build-test-push.yaml  ci.yml  release.yml
adsb-api/: Dockerfile.test  README.md  WEBSOCKET_API.md  pyproject.toml  pytest.ini  requirements.txt
adsb-api/app/: main.py  models.py  schemas.py
adsb-api/app/core/: __init__.py  cache.py  config.py  database.py  utils.py
adsb-api/app/data/: __init__.py  airlines.py  airspace_boundaries.py  message_labels.py
adsb-api/app/routers/: __init__.py  acars.py  aircraft.py  airframe.py  alerts.py  audio.py  aviation.py  history.py  map.py  notifications.py  safety.py  system.py
adsb-api/app/services/: __init__.py  acars.py  acars_decoder.py  aircraft_info.py  airspace.py  alerts.py  antenna_analytics.py  audio.py  external_db.py  geodata.py  libacars_binding.py  notifications.py  opensky_db.py  photo_cache.py  safety.py  socketio_manager.py  sse.py  stats_cache.py  weather_cache.py  websocket.py
adsb-api/atc-whisper/: README.md  pyproject.toml
adsb-api/atc-whisper/atc_whisper/: __init__.py  client.py  models.py  preprocessing.py  vad.py
adsb-api/atc-whisper/examples/: transcribe_atc.py
adsb-api/scripts/: download-opensky-db.sh  simulate_websocket_events.py
adsb-api/tests/: README.md  __init__.py  conftest.py
adsb-api/tests/e2e/: __init__.py  test_acars_api.py  test_aircraft_api.py  test_airframe_api.py  test_alerts_comprehensive.py  test_aviation_api.py  test_history_api.py  test_map_api.py  test_notifications_api.py  test_safety_api.py  test_system_api.py  test_websocket_api.py
adsb-api/tests/integration/: __init__.py  test_aircraft_api.py  test_alerts_api.py  test_history_api.py  test_safety_api.py
adsb-api/tests/unit/: __init__.py  test_utils.py
deploy/proxmox/: .gitignore  README.md  bootstrap.sh  config.sh  deploy.sh  docker-compose.prod.yml  docker-compose.release.yml  gen-env.sh  nginx.conf  provision.sh  set-public-features.sh  skyspy-update.sh  skyspyctl
design_handoff_skyspy_ui/: README.md
design_handoff_skyspy_ui/designs/: Aircraft Detail.dc.html  Aircraft List.dc.html  Alerts.dc.html  Cannonball.dc.html  History.dc.html  Radio.dc.html  SkySpy.dc.html  Statistics.dc.html  System.dc.html
docker/libacars/: 0001-null-guard-unknown-direction.patch
docker/postgres/: Dockerfile
docs/: .categories.json  .rdme.yaml  00-quick-start.md  01-overview.md  02-configuration.md  03-authentication.md  04-database.md  05-rest-api.md  06-websocket-api.md  07-go-services.md  08-frontend.md  09-background-tasks.md  10-map-aviation.md  11-deployment.md  12-testing.md  13-safety-alerts.md  14-acars.md  15-contributing.md  16-troubleshooting.md  17-cannonball-mode.md  18-statistics.md  19-admin-configuration.md  20-public-deploy-checklist.md  21-deep-linking.md  22-open-data-feeds.md  23-postgis-clustering-design.md  24-celery-worker-rearchitecture.md  README.md  SOCKETIO_API.md
docs/cli/: skyspy.md  skyspy_airband.md  skyspy_auth.md  skyspy_auth_status.md  skyspy_completion.md  skyspy_completion_bash.md  skyspy_completion_fish.md  skyspy_completion_powershell.md  skyspy_completion_zsh.md  skyspy_configure.md  skyspy_login.md  skyspy_logout.md  skyspy_radio-pro.md  skyspy_radio.md
docs/screenshots/: .gitignore  aircraft-detail.webm  crt-mode.webm  index.json
docs/socketio/: 00-overview.md  01-connection.md  02-message-protocol.md  03-main-namespace.md  04-specialized-namespaces.md  05-client-implementation.md  06-troubleshooting.md  99-event-reference.md  CONVERSION_COMPLETE.md  FIXES_APPLIED.md  README.md
monitoring/: prometheus-rules.yml  spysky-overview.grafana.json
rtl-airband-uploader/: Dockerfile  requirements.txt  uploader.py
searxng/: .gitignore  settings.yml
skyspy-cli/: README.md  config.py  geo.py  pyproject.toml  requirements.txt  skyspy_radar.py  skyspy_radio.py  skyspy_radio_pro.py  themes.py
skyspy-go/: .golangci.yml  Makefile  OIDC_PLAN.md  README.md  TESTING.md  coverage.html  coverage.out  coverage_auth.html  coverage_auth.out  coverage_geo.out  coverage_search.out  coverage_spectrum.html  coverage_spectrum.out  coverage_ui.out  coverage_ws.out  go.mod  go.sum
skyspy-go/docs/: airband.md
skyspy-go/scripts/: test-e2e.sh
skyspy_common/: README.md  pyproject.toml
skyspy_common/skyspy_common/: __init__.py  subprocess_decode.py
skyspy_common/skyspy_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skyspy_common/skyspy_common/libacars/: __init__.py  api.py  binding.py  c_defs.py  cache.py  circuit_breaker.py  core.py  exceptions.py  metrics.py  pool.py  validation.py
skyspy_common/skyspy_common/libacars/tests/: __init__.py  conftest.py  test_binding.py  test_concurrency.py  test_exceptions.py  test_integration.py  test_msg_dir_crash.py  test_performance.py  test_validation.py
skyspy_django/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  manage.py  pytest.ini  requirements.txt  test_db.sqlite3
skyspy_django/scripts/: check_schema.sh  gen_socketio_events.py
skyspy_django/skyspy/: __init__.py  asgi.py  celery.py  (+5 more)
test/: Dockerfile.test  conftest.py  mock_1090.py  pytest.ini  requirements.txt  test_adsb_api.py
test-results/: .coverage  coverage.xml  junit.xml  report.html  results.xml
web/: .eslintrc.cjs  .gitignore  .prettierignore  Dockerfile.dev  UI_MODERNIZATION_PLAN.md  adaptive_grid.patch  index.html  jrings_keyboard.patch  keyboard_shortcuts_additions.txt  package-lock.json  package.json  playwright.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.js
(+2619 files in other folders)
