[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyspy-api"
version = "0.1.0"
description = "ADS-B aircraft tracking API with real-time SSE streaming"

requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "CHAOS.CORP" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    # FastAPI and ASGI
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",

    # HTTP Client
    "httpx>=0.26.0",

    # Configuration
    "pydantic-settings>=2.1.0",

    # Notifications
    "apprise>=1.6.0",

    # Redis (for multi-worker SSE)
    "redis>=5.0.0",

    # S3 Storage (for photo cache)
    "boto3>=1.34.0",

    # Socket.IO for real-time communication
    "python-socketio>=5.11.0",

    # Development
    "python-multipart>=0.0.6",
    "sentry-sdk>=1.29.0",
    "prometheus_client>=0.22.0",
    "psutil",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "responses>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-html>=4.0.0",
    "httpx>=0.26.0",
    "aiosqlite>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/CHA0S-CORP/skyspy"
Repository = "https://github.com/CHA0S-CORP/skyspy"
Issues = "https://github.com/CHA0S-CORP/skyspy/issues"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "apprise.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
