[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skyspy-radio"
version = "1.0.0"
description = "Old school retro CLI client for SkySpy aircraft tracking"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "SkySpy Team"}
]
keywords = ["aviation", "adsb", "acars", "cli", "retro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "rich>=13.0.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "click>=8.0.0",
]

[project.scripts]
skyspy-radio = "skyspy_radio:main"
skyspy-radio-pro = "skyspy_radio_pro:main"
skyspy-radar = "skyspy_radar:main"

[project.urls]
Homepage = "https://github.com/skyspy/skyspy-cli"
