[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atc-whisper"
version = "0.1.0"
description = "Lightweight async ATC airband audio preprocessing and transcription via speaches-ai"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Max" }]
keywords = ["atc", "airband", "whisper", "speech-to-text", "aviation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "httpx>=0.25.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "noisereduce>=3.0.0",
    "webrtcvad>=2.0.10",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.urls]
Homepage = "https://github.com/yourusername/atc-whisper"

[tool.hatch.build.targets.wheel]
packages = ["atc_whisper"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
